# OpenGL-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  gl_framework.cpp  gl_framework.hpp  main.cpp  shader_util.hpp  view.cpp  view.hpp
include/: gl_framework.hpp  texture_util.hpp  view.hpp
shaders/: fshader.glsl  vshader.glsl
src/: main.cpp  shader_util.cpp  texture_util.cpp  view.cpp
